--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -24,7 +24,7 @@
             <p class="text-white mx-3 mt-3">Сортировать:</p>
             <div class="form-check text-white mx-3">
                 <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default" 
-                {% if not request.GET.order_by or request.GET.order_by == "default"  %}checked{% endif %}>
+                {% if not request.GET.order_by or request.GET.order_by == 'default' %}checked{% endif %}>
                 <label class="form-check-label" for="flexRadioDefault1">
                     По умолчанию
                 </label>
@@ -87,18 +87,18 @@
         <div class="custom-shadow d-flex">
 
             <li class="page-item {% if not goods.has_previous %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page = goods.previous_page_namber %}{% else %}#{% endif %}">Назад</a>
+                <a class="page-link" href="{% if goods.has_previous %}?{% change_params page=goods.previous_page_namber %}{% else %}#{% endif %}">Назад</a>
             </li>
             {% for page in goods.paginator.page_range %}
             {% if page >= goods.number|add:-2 and page <= goods.number|add:2 %}
             <li class="page-item {% if goods.namber == page %}active{% endif %}">
-                <a class="page-link" href="?{% change_params page = page %}">{{page}}</a>
+                <a class="page-link" href="?{% change_params page=page %}">{{page}}</a>
             </li>
             {% endif %}
             {% endfor %}
 
             <li class="page-item {% if not goods.has_next %}disabled{% endif %}">
-                <a class="page-link" href="{% if goods.has_next %}?{% change_params page = goods.next_page_number %}{% else %}#{% endif %}">Следующая</a>
+                <a class="page-link" href="{% if goods.has_next %}?{% change_params page=goods.next_page_number %}{% else %}#{% endif %}">Следующая</a>
             </li>
         </div>
     </ul>
